TR-1784 - Fix layout issues with template settings tab

--- a/src/pages/templatesV2/EditAndPreviewPage.module.scss
+++ b/src/pages/templatesV2/EditAndPreviewPage.module.scss
@@ -5,7 +5,6 @@
   width: 100%;
   top: rem(56); // Note `top` offset by the exact height of the navigation above found in `FullPage.module.scss`
   z-index: 50;
-  border-bottom: 2px solid color(gray, 7);
 
   @media (min-width: breakpoint(small)) {
     position: fixed;
@@ -16,7 +15,7 @@
   margin-top: 0;
 
   @media (min-width: breakpoint(small)) {
-    margin-top: 60px;
+    margin-top: 70px;
   }
 }
 
