--- a/src/pages/templatesV2/components/settings/EditSettings.module.scss
+++ b/src/pages/templatesV2/components/settings/EditSettings.module.scss
@@ -1,10 +1,13 @@
 @import '~@sparkpost/matchbox/src/styles/config.scss';
 
 .EditSettings {
-  flex-direction: column-reverse;
   padding: spacing(large);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: spacing();
 
-  @media only screen and (min-width: 60em) { // sm
-    flex-direction: row;
+  // It's a little odd to be using `em` units for a viewport size? I might be missing something
+  @media only screen and (min-width: 60em) {
+    grid-template-columns: 1fr 1fr;
   }
 }
