--- a/src/pages/templatesV2/components/settings/SettingsSection.module.scss
+++ b/src/pages/templatesV2/components/settings/SettingsSection.module.scss
@@ -2,7 +2,7 @@
 
 .SettingsSection {
   border-radius: 2px;
-  padding: 1rem;
+  margin-bottom: 0; // Overriding matchbox component styles
 }
 
 .SettingsHeader {
